# androidpublisher

./: .gitignore  README.md  pyproject.toml
androidpublisher/: __main__.py  main.py  upload.py
tests/: test_androidpublisher.py
