[tool.poetry]
name = "androidpublisher"
version = "0.1.0"
description = ""
authors = ["leynier <leynier41@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
rick-portal-gun = "androidpublisher.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}
google-api-python-client = "^1.12.5"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
