[tool.poetry]
name = "androidpublisher"
version = "0.1.8"
description = ""
authors = ["leynier <leynier41@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
androidpublisher = "androidpublisher.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.0"
google-api-python-client = "^2.27.0"
oauth2client = "^4.1.3"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
